bk_ida/gccida/c3/output_format
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/output_format/src/diagnostic.c:1088:22: error: unknown type name 'output_buffer_0'; did you mean 'output_buffer'?
void  output_format( output_buffer_0 *buffer) 
                     ^~~~~~~~~~~~~~~
                     output_buffer
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/output_format/src/diagnostic.h:28:30: note: 'output_buffer' declared here
typedef struct output_buffer output_buffer;
                             ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/output_format/src/diagnostic.c:1097:1: error: unknown type name 'va_list_0'; did you mean 'va_list'?
va_list_0 *v9; // rcx 
^~~~~~~~~
va_list
/usr/include/stdio.h:46:20: note: 'va_list' declared here
typedef _G_va_list va_list;
                   ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/output_format/src/diagnostic.c:1101:1: error: unknown type name 'va_list_0'; did you mean 'va_list'?
va_list_0 *v13; // rax 
^~~~~~~~~
va_list
/usr/include/stdio.h:46:20: note: 'va_list' declared here
typedef _G_va_list va_list;
                   ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/output_format/src/diagnostic.c:1105:1: error: unknown type name 'va_list_0'; did you mean 'va_list'?
va_list_0 *v17; // rax 
^~~~~~~~~
va_list
/usr/include/stdio.h:46:20: note: 'va_list' declared here
typedef _G_va_list va_list;
                   ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/output_format/src/diagnostic.c:1108:1: error: unknown type name 'va_list_0'; did you mean 'va_list'?
va_list_0 *v20; // rcx 
^~~~~~~~~
va_list
/usr/include/stdio.h:46:20: note: 'va_list' declared here
typedef _G_va_list va_list;
                   ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/output_format/src/diagnostic.c:1113:1: error: unknown type name 'va_list_0'; did you mean 'va_list'?
va_list_0 *format_args; // rax 
^~~~~~~~~
va_list
/usr/include/stdio.h:46:20: note: 'va_list' declared here
typedef _G_va_list va_list;
                   ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/output_format/src/diagnostic.c:1116:1: error: unknown type name 'va_list_0'; did you mean 'va_list'?
va_list_0 *v28; // rcx 
^~~~~~~~~
va_list
/usr/include/stdio.h:46:20: note: 'va_list' declared here
typedef _G_va_list va_list;
                   ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/output_format/src/diagnostic.c:1119:1: error: unknown type name 'va_list_0'; did you mean 'va_list'?
va_list_0 *v31; // rcx 
^~~~~~~~~
va_list
/usr/include/stdio.h:46:20: note: 'va_list' declared here
typedef _G_va_list va_list;
                   ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/output_format/src/diagnostic.c:1127:1: error: unknown type name 'output_buffer_0'; did you mean 'output_buffer'?
output_buffer_0 *v39; // rdi 
^~~~~~~~~~~~~~~
output_buffer
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/output_format/src/diagnostic.h:28:30: note: 'output_buffer' declared here
typedef struct output_buffer output_buffer;
                             ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/output_format/src/diagnostic.c:1131:1: error: unknown type name 'va_list_0'; did you mean 'va_list'?
va_list_0 *v43; // rax 
^~~~~~~~~
va_list
/usr/include/stdio.h:46:20: note: 'va_list' declared here
typedef _G_va_list va_list;
                   ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/output_format/src/diagnostic.c:1339:24: error: use of undeclared identifier 'off_67FAE6'
sprintf( digit_buffer, off_67FAE6, *v51); 
                       ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/output_format/src/diagnostic.c:1373:25: error: use of undeclared identifier 'off_685EAB'
sprintf( digit_buffer, &off_685EAB[1], *v22); 
                        ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/output_format/src/diagnostic.c:1387:24: error: use of undeclared identifier 'off_684DDF'
sprintf( digit_buffer, off_684DDF, *v40); 
                       ^
13 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/output_format/src/obj/diagnostic.o] Error 1
